Fitur Lengkap (v2) & Desain AksaraLingo Final

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "html2canvas": "^1.4.1",
         "signature_pad": "^5.1.1"
     }
 }
